# JARVIS

./: .gitignore  PLAN.md  README.md  install.ps1  install.sh  mac-fix.patch  pyproject.toml  requirements.txt
jarvis/: __init__.py  __main__.py  config.yaml  digest.py  main.py
jarvis/actions/: __init__.py  browser.py  desktop.py  memory.py  news.py  registry.py  search.py  smart.py  system.py
jarvis/brain/: __init__.py  conversation.py  llm.py  prompts.py  tools.py
jarvis/security/: __init__.py  scanner.py
jarvis/sessions/: __init__.py  store.py
jarvis/stt/: __init__.py  listener.py
jarvis/tts/: __init__.py  speaker.py
jarvis/utils/: __init__.py  audio.py
jarvis/vision/: __init__.py  eyes.py  loop.py
