[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jarvis-assistant"
version = "0.3.0"
description = "JARVIS — Voice-controlled AI assistant inspired by Iron Man"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "JARVIS Project"}]

dependencies = [
    "faster-whisper>=1.2.0",
    "RealtimeSTT>=1.0.0",
    "edge-tts>=7.0.0",
    "sounddevice>=0.4.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyautogui>=0.9.54",
    "playwright>=1.60.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "ddgs>=9.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
windows = ["pywinauto>=0.6.9"]

[project.scripts]
jarvis = "jarvis.main:main"

[tool.setuptools]
packages = ["jarvis", "jarvis.stt", "jarvis.tts", "jarvis.brain",
            "jarvis.actions", "jarvis.utils", "jarvis.security",
            "jarvis.sessions", "jarvis.vision"]